@@ -128,7 +128,8 @@ pqxx::stream_from::raw_line pqxx::stream_from::get_raw_line()
   }
   else
   {
-    return {};
+    return std::make_pair(
+      std::unique_ptr<char, void(*)(void const *)>{nullptr, nullptr}, 0u);
   }
 }
 
